<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/kmln_graph_header_item_height"
            android:id="@+id/kmlnHeaderItemDaily"
            android:clickable="true"
            android:paddingHorizontal="@dimen/kmln_graph_header_item_padding_h"
            android:layout_marginHorizontal="@dimen/kmln_graph_header_item_margin_h"
            android:elevation="5dp"
            android:background="@drawable/kmln_bg_graph_header_item">

            <TextView
                android:id="@+id/kmlnHeaderItemDailyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/kmln_graph_header_item_daily"
                android:textColor="@color/kmln_graph_header_item_text_active"
                android:textSize="@dimen/kmln_graph_header_item_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/kmln_graph_header_item_height"
            android:id="@+id/kmlnHeaderItemWeekly"
            android:paddingHorizontal="@dimen/kmln_graph_header_item_padding_h"
            android:layout_marginHorizontal="@dimen/kmln_graph_header_item_margin_h"
            android:background="@null">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kmlnHeaderItemWeeklyTextView"
                android:layout_centerInParent="true"
                android:textSize="@dimen/kmln_graph_header_item_text_size"
                android:textColor="@color/kmln_graph_header_item_text_normal"
                android:text="@string/kmln_graph_header_item_weekly"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/kmln_graph_header_item_height"
            android:id="@+id/kmlnHeaderItemMonthly"
            android:paddingHorizontal="@dimen/kmln_graph_header_item_padding_h"
            android:layout_marginHorizontal="@dimen/kmln_graph_header_item_margin_h"
            android:background="@null">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kmlnHeaderItemMonthlyTextView"
                android:layout_centerInParent="true"
                android:textSize="@dimen/kmln_graph_header_item_text_size"
                android:textColor="@color/kmln_graph_header_item_text_normal"
                android:text="@string/kmln_graph_header_item_monthly"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/kmln_graph_header_item_height"
            android:id="@+id/kmlnHeaderItemYearly"
            android:paddingHorizontal="@dimen/kmln_graph_header_item_padding_h"
            android:layout_marginHorizontal="@dimen/kmln_graph_header_item_margin_h"
            android:background="@null">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kmlnHeaderItemYearlyTextView"
                android:layout_centerInParent="true"
                android:textSize="@dimen/kmln_graph_header_item_text_size"
                android:textColor="@color/kmln_graph_header_item_text_normal"
                android:text="@string/kmln_graph_header_item_yearly"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="26dp"
        android:paddingTop="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kmln_graph_header_average"
            android:textColor="@color/kmln_graph_color_grey"
            android:textSize="@dimen/kmln_graph_header_average_title_text_size"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAvgValue"
                android:text="45"
                android:textColor="@color/kmln_graph_color_black"
                android:textSize="@dimen/kmln_graph_header_average_value_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:id="@+id/textViewAvgUnit"
                android:textColor="@color/kmln_graph_color_black"
                android:textSize="@dimen/kmln_graph_header_average_percent_text_size"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jul 12, 2023"
            android:id="@+id/textViewAvgTimestamp"
            android:textColor="@color/kmln_graph_color_grey"
            android:textSize="@dimen/kmln_graph_header_average_datetime_text_size"/>
    </LinearLayout>
</LinearLayout>